syntax = "proto3";
package agent;

message RequestActiveConnections{
    optional string pod_ip = 2 ;
}
// TODO: the complete Response will be able to return all the context below
//* "Event Id: {} Protocol: {:?} SRC: {}:{} -> DST: {}:{}",
//* event_id, proto, src, src_port, dst, dst_port
message ActiveConnectionResponse{
    string status = 1;
    map<string,string> events = 2 ; //for simplicity right now we only return event_id and src
}

//declare agent api 
service Agent{
    //active connections endpoint 
    rpc ActiveConnections(RequestActiveConnections) returns (ActiveConnectionResponse);
}

